[gd_scene load_steps=8 format=2]

[ext_resource path="res://Worlds/WorldBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/PortalEnterLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/CheckpointWorld.tscn" type="PackedScene" id=3]
[ext_resource path="res://Worlds/World1/World1.gd" type="Script" id=4]
[ext_resource path="res://Objects/PlatformMoveStay.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Portal.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/TutorialText.tscn" type="PackedScene" id=7]

[node name="World1" instance=ExtResource( 1 )]
script = ExtResource( 4 )
world_num = 1

[node name="TileMap" parent="." index="1"]
tile_data = PoolIntArray( -1114055, 5, 0, -1114054, 5, 0, -1114053, 5, 0, -1114052, 5, 0, -1114051, 5, 0, -1114050, 5, 0, -1114049, 5, 0, -1114048, 5, 0, -1114047, 5, 0, -1114046, 5, 0, -1114045, 5, 0, -1114044, 5, 0, -1114043, 5, 0, -1114042, 5, 0, -1114041, 5, 0, -1114040, 5, 0, -1114039, 5, 0, -1114038, 5, 0, -1114037, 5, 0, -1114036, 5, 0, -1114034, 5, 0, -1114033, 5, 0, -1114032, 5, 0, -1048519, 5, 0, -1048518, 5, 0, -1048517, 5, 0, -1048516, 5, 0, -1048515, 5, 0, -1048514, 5, 0, -1048513, 5, 0, -1048512, 5, 0, -1048511, 5, 0, -1048510, 5, 0, -1048509, 5, 0, -1048508, 5, 0, -1048507, 5, 0, -1048506, 5, 0, -1048505, 5, 0, -1048504, 5, 0, -1048503, 5, 0, -1048502, 5, 0, -1048501, 5, 0, -1048500, 5, 0, -1048498, 5, 0, -1048497, 5, 0, -1048496, 5, 0, -982983, 5, 0, -982982, 5, 0, -982981, 5, 0, -982980, 5, 0, -982979, 5, 0, -982978, 5, 0, -982977, 5, 0, -982976, 5, 0, -982975, 5, 0, -982974, 5, 0, -982973, 5, 0, -982972, 5, 0, -982971, 5, 0, -982970, 5, 0, -982969, 5, 0, -982968, 5, 0, -982967, 5, 0, -982966, 5, 0, -982965, 5, 0, -982961, 5, 0, -982960, 5, 0, -917447, 5, 0, -917446, 5, 0, -917445, 5, 0, -917444, 5, 0, -917443, 5, 0, -917442, 5, 0, -917441, 5, 0, -917440, 5, 0, -917439, 5, 0, -917438, 5, 0, -917437, 5, 0, -917425, 5, 0, -917424, 5, 0, -851911, 5, 0, -851910, 5, 0, -851909, 5, 0, -851908, 5, 0, -851907, 5, 0, -851906, 5, 0, -851905, 5, 0, -851888, 5, 0, -786375, 5, 0, -786374, 5, 0, -786373, 5, 0, -786372, 5, 0, -786371, 5, 0, -786370, 5, 0, -786369, 5, 0, -786352, 5, 0, -720839, 5, 0, -720838, 5, 0, -720837, 5, 0, -720836, 5, 0, -720835, 5, 0, -720834, 5, 0, -720833, 5, 0, -720826, 5, 0, -720825, 5, 0, -720824, 5, 0, -720823, 5, 0, -720822, 5, 0, -720821, 5, 0, -720820, 5, 0, -720819, 5, 0, -720818, 5, 0, -720817, 5, 0, -720816, 5, 0, -589828, 5, 0, -589827, 5, 0, -589826, 5, 0, -589825, 5, 0, -655360, 5, 0, -655359, 5, 0, -655358, 5, 0, -655357, 5, 0, -655356, 5, 0, -655355, 5, 0, -655354, 5, 0, -655353, 5, 0, -655352, 5, 0, -655351, 5, 0, -655350, 5, 0, -655349, 5, 0, -655348, 5, 0, -655347, 5, 0, -655346, 5, 0, -655345, 5, 0, -655344, 5, 0, -655343, 5, 0, -655342, 5, 0, -655341, 5, 0, -655340, 5, 0, -655339, 5, 0, -655338, 5, 0, -655337, 5, 0, -655336, 5, 0, -655335, 5, 0, -655334, 5, 0, -655333, 5, 0, -655332, 5, 0, -655331, 5, 0, -655330, 5, 0, -655329, 5, 0, -655328, 5, 0, -655327, 5, 0, -655326, 5, 0, -655325, 5, 0, -655324, 5, 0, -655323, 5, 0, -655322, 5, 0, -655321, 5, 0, -655320, 5, 0, -655319, 5, 0, -655318, 5, 0, -655317, 5, 0, -655316, 5, 0, -655315, 5, 0, -655314, 5, 0, -655313, 5, 0, -655312, 5, 0, -655311, 5, 0, -655310, 5, 0, -655309, 5, 0, -655308, 5, 0, -655307, 5, 0, -655306, 5, 0, -655305, 5, 0, -655304, 5, 0, -655303, 5, 0, -655302, 5, 0, -655301, 5, 0, -655290, 5, 0, -655289, 5, 0, -655288, 5, 0, -655287, 5, 0, -655286, 5, 0, -655285, 5, 0, -655284, 5, 0, -655283, 5, 0, -655282, 5, 0, -655281, 5, 0, -655280, 5, 0, -524292, 5, 0, -524291, 5, 0, -524290, 5, 0, -524289, 5, 0, -589820, 5, 0, -589819, 5, 0, -589818, 5, 0, -589817, 5, 0, -589816, 5, 0, -589815, 5, 0, -589814, 5, 0, -589813, 5, 0, -589812, 5, 0, -589811, 5, 0, -589810, 5, 0, -589809, 5, 0, -589808, 5, 0, -589807, 5, 0, -589806, 5, 0, -589805, 5, 0, -589804, 5, 0, -589803, 5, 0, -589802, 5, 0, -589801, 5, 0, -589800, 5, 0, -589799, 5, 0, -589798, 5, 0, -589797, 5, 0, -589796, 5, 0, -589795, 5, 0, -589794, 5, 0, -589793, 5, 0, -589792, 5, 0, -589791, 5, 0, -589790, 5, 0, -589789, 5, 0, -589788, 5, 0, -589787, 5, 0, -589786, 5, 0, -589785, 5, 0, -589784, 5, 0, -589783, 5, 0, -589782, 5, 0, -589781, 5, 0, -589780, 5, 0, -589779, 5, 0, -589778, 5, 0, -589777, 5, 0, -589776, 5, 0, -589775, 5, 0, -589774, 5, 0, -589773, 5, 0, -589772, 5, 0, -589771, 5, 0, -589770, 5, 0, -589769, 5, 0, -589768, 5, 0, -589767, 5, 0, -589766, 5, 0, -589765, 5, 0, -589754, 5, 0, -589753, 5, 0, -589752, 5, 0, -589751, 5, 0, -589750, 5, 0, -589749, 5, 0, -589748, 5, 0, -589747, 5, 0, -589746, 5, 0, -589745, 5, 0, -589744, 5, 0, -458756, 5, 0, -458755, 5, 0, -458754, 5, 0, -458753, 5, 0, -524284, 5, 0, -524283, 5, 0, -524282, 5, 0, -524281, 5, 0, -524280, 5, 0, -524279, 5, 0, -524278, 5, 0, -524277, 5, 0, -524276, 5, 0, -524275, 5, 0, -524274, 5, 0, -524273, 5, 0, -524272, 5, 0, -524271, 5, 0, -524266, 5, 0, -524265, 5, 0, -524264, 5, 0, -524263, 5, 0, -524262, 5, 0, -524261, 5, 0, -524260, 5, 0, -524259, 5, 0, -524258, 5, 0, -524257, 5, 0, -524256, 5, 0, -524255, 5, 0, -524254, 5, 0, -524253, 5, 0, -524252, 5, 0, -524251, 5, 0, -524250, 5, 0, -524218, 5, 0, -524217, 5, 0, -393220, 5, 0, -393219, 5, 0, -393218, 5, 0, -393217, 5, 0, -458748, 5, 0, -458747, 5, 0, -458746, 5, 0, -458745, 5, 0, -458744, 5, 0, -458743, 5, 0, -458742, 5, 0, -458741, 5, 0, -458740, 5, 0, -458739, 5, 0, -458738, 5, 0, -458737, 5, 0, -458728, 5, 0, -458727, 5, 0, -458726, 5, 0, -458725, 5, 0, -458724, 5, 0, -458723, 5, 0, -458722, 5, 0, -458721, 5, 0, -458720, 5, 0, -458719, 5, 0, -458718, 5, 0, -458717, 5, 0, -458716, 5, 0, -458715, 5, 0, -458682, 5, 0, -458681, 5, 0, -327684, 5, 0, -327683, 5, 0, -327682, 5, 0, -327681, 5, 0, -393212, 5, 0, -393211, 5, 0, -393210, 5, 0, -393209, 5, 0, -393208, 5, 0, -393207, 5, 0, -393206, 5, 0, -393205, 5, 0, -393204, 5, 0, -393203, 5, 0, -393190, 5, 0, -393189, 5, 0, -393188, 5, 0, -393187, 5, 0, -393186, 5, 0, -393185, 5, 0, -393184, 5, 0, -393183, 5, 0, -393182, 5, 0, -393181, 5, 0, -393180, 5, 0, -393156, 5, 0, -393155, 5, 0, -393154, 5, 0, -393153, 5, 0, -393146, 5, 0, -393145, 5, 0, -262148, 5, 0, -262147, 5, 0, -262146, 5, 0, -262145, 5, 0, -327673, 5, 0, -327672, 5, 0, -327671, 5, 0, -327650, 5, 0, -327649, 5, 0, -327648, 5, 0, -327620, 5, 0, -327619, 5, 0, -327618, 5, 0, -327617, 5, 0, -327610, 5, 0, -327609, 5, 0, -196612, 5, 0, -196611, 5, 0, -196610, 5, 0, -196609, 5, 0, -262137, 5, 0, -262136, 5, 0, -262135, 5, 0, -262114, 5, 0, -262113, 5, 0, -262112, 5, 0, -262084, 5, 0, -262083, 5, 0, -262082, 5, 0, -262081, 5, 0, -262074, 5, 0, -262073, 5, 0, -131076, 5, 0, -131075, 5, 0, -131074, 5, 0, -131073, 5, 0, -196548, 5, 0, -196547, 5, 0, -196546, 5, 0, -196545, 5, 0, -196538, 5, 0, -196537, 5, 0, -65540, 5, 0, -65539, 5, 0, -65538, 5, 0, -65537, 5, 0, -131072, 5, 0, -131071, 5, 0, -131070, 5, 0, -131069, 5, 0, -131068, 5, 0, -131067, 5, 0, -131066, 5, 0, -131062, 5, 0, -131061, 5, 0, -131060, 5, 0, -131059, 5, 0, -131046, 5, 0, -131045, 5, 0, -131044, 5, 0, -131043, 5, 0, -131042, 5, 0, -131041, 5, 0, -131040, 5, 0, -131039, 5, 0, -131038, 5, 0, -131037, 5, 0, -131036, 5, 0, -131035, 5, 0, -131015, 5, 0, -131014, 5, 0, -131013, 5, 0, -131012, 5, 0, -131011, 5, 0, -131010, 5, 0, -131009, 5, 0, -131002, 5, 0, -131001, 5, 0, -4, 5, 0, -3, 5, 0, -2, 5, 0, -1, 5, 0, -65536, 5, 0, -65535, 5, 0, -65534, 5, 0, -65533, 5, 0, -65532, 5, 0, -65531, 5, 0, -65530, 5, 0, -65529, 5, 0, -65528, 5, 0, -65527, 5, 0, -65526, 5, 0, -65525, 5, 0, -65524, 5, 0, -65523, 5, 0, -65510, 5, 0, -65509, 5, 0, -65508, 5, 0, -65507, 5, 0, -65506, 5, 0, -65505, 5, 0, -65504, 5, 0, -65503, 5, 0, -65502, 5, 0, -65501, 5, 0, -65500, 5, 0, -65499, 5, 0, -65479, 5, 0, -65478, 5, 0, -65477, 5, 0, -65476, 5, 0, -65475, 5, 0, -65474, 5, 0, -65473, 5, 0, -65466, 5, 0, -65465, 5, 0 )

[node name="PortalEnterLevel" parent="." index="3"]
position = Vector2( 400, -112 )
next_scene = "res://Worlds/World1/Levels1/L1.tscn"

[node name="PortalEnterLevel2" parent="." index="4" instance=ExtResource( 2 )]
position = Vector2( 1136, -112 )
next_scene = "res://Worlds/World1/Levels1/L2.tscn"
scene_level = 2

[node name="PortalEnterLevel3" parent="." index="5" instance=ExtResource( 2 )]
position = Vector2( 1984, -272 )
next_scene = "res://Worlds/World1/Levels1/L3.tscn"
scene_level = 3

[node name="Level1" type="Node2D" parent="." index="6"]

[node name="PlatformMoveStay" parent="Level1" index="0" instance=ExtResource( 5 )]
position = Vector2( 512, -8 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="PlatformMoveStay2" parent="Level1" index="1" instance=ExtResource( 5 )]
position = Vector2( 640, -8 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="PlatformMoveStay3" parent="Level1" index="2" instance=ExtResource( 5 )]
position = Vector2( 768, -8 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="Level2" type="Node2D" parent="." index="7"]

[node name="PlatformMoveStay4" parent="Level2" index="0" instance=ExtResource( 5 )]
position = Vector2( 1312, -8 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="PlatformMoveStay5" parent="Level2" index="1" instance=ExtResource( 5 )]
position = Vector2( 1504, -72 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="PlatformMoveStay6" parent="Level2" index="2" instance=ExtResource( 5 )]
position = Vector2( 1696, -8 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="Level3" type="Node2D" parent="." index="8"]

[node name="PlatformMoveStay7" parent="Level3" index="0" instance=ExtResource( 5 )]
position = Vector2( 2144, -112 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="PlatformMoveStay9" parent="Level3" index="1" instance=ExtResource( 5 )]
position = Vector2( 2144, -224 )
points = PoolVector2Array( 0, 4, 0, -52 )

[node name="CheckpointWorld3" parent="." index="9" instance=ExtResource( 3 )]
position = Vector2( 272, -64 )

[node name="CheckpointWorld4" parent="." index="10" instance=ExtResource( 3 )]
position = Vector2( 1008, -64 )

[node name="CheckpointWorld2" parent="." index="11" instance=ExtResource( 3 )]
position = Vector2( 1872, -96 )

[node name="Portal" parent="." index="12" instance=ExtResource( 6 )]
position = Vector2( 2480, -432 )
next_scene = "res://Worlds/World2/World2.tscn"

[node name="Label" parent="." index="13" instance=ExtResource( 7 )]
margin_left = 48.0
margin_top = -136.0
margin_right = 158.0
margin_bottom = -107.0
text = "World 1"
